--- a/_toc.yml
+++ b/_toc.yml
@@ -3,8 +3,6 @@ root: index
 parts:
   - caption: 目次
     chapters:
-      - title: Atomic多極子関連
-        file: src/atomic_multipole.md
+      - file: src/atomic_multipole.md
         sections:
-          - title: 結晶場基底の活性多極子
-            file: src/Oh_G7_G8.ipynb
+          - file: src/Oh_G7_G8
