--- a/_toc.yml
+++ b/_toc.yml
@@ -1,8 +1,8 @@
 format: jb-book
 root: index
 parts:
-  - caption: 目次
-    chapters:
-      - file: src/atomic_multipole.md
-        sections:
-          - file: src/Oh_G7_G8
+- caption: 目次
+  chapters:
+    - file: src/atomic_multipole.md
+      sections:
+        - file: src/mp_cef/Oh_G7_G8.ipynb
