--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 title: MultiPie
 author: MultiPie developers
 copyright: '2021-2024'
-logo: qtdraw_logo.png
+logo: multipie_logo.png
 
 # ==================================================
 # Execution settings
